changing git ingore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /Game Design II Final Project Player/Logs
 /Game Design II Final Project Player/UserSettings
 /Game Design II Final Project Player/Temp
+/Game Design II Final Project Player/Obj
+
+/Game Design II Whitebox URP 3D Player/Library
+/Game Design II Whitebox URP 3D Player/Logs
+/Game Design II Whitebox URP 3D Player/UserSettings
+/Game Design II Whitebox URP 3D Player/Temp
+/Game Design II Whitebox URP 3D Player/Obj
