added whitebox project

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 /Game Design II Final Project Player/UserSettings
 /Game Design II Final Project Player/Temp
 /Game Design II Final Project Player/Obj
-
-/Game Design II Whitebox URP 3D Player/Library
-/Game Design II Whitebox URP 3D Player/Logs
-/Game Design II Whitebox URP 3D Player/UserSettings
-/Game Design II Whitebox URP 3D Player/Temp
-/Game Design II Whitebox URP 3D Player/Obj
+/Game Design II Whitebox URP/Library
+/Game Design II Whitebox URP/Logs
+/Game Design II Whitebox URP/Temp
+/Game Design II Whitebox URP/UserSettings
