--- a/Game Design II Final Project Player/Assembly-CSharp.Player.csproj
+++ b/Game Design II Final Project Player/Assembly-CSharp.Player.csproj
@@ -61,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraControll.cs" />
+    <Compile Include="Assets\Scripts\AnimatorManager.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
   </ItemGroup>
   <ItemGroup>
