--- a/Game Design II Final Project Player/Assembly-CSharp.csproj
+++ b/Game Design II Final Project Player/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\Scripts\Enemy Brains Collection\Spitter_AI.cs" />
     <Compile Include="Assets\Scripts\CameraControll.cs" />
     <Compile Include="Assets\Scripts\AnimatorManager.cs" />
+    <Compile Include="Assets\Smoohta.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
   </ItemGroup>
