--- a/Game Design II Whitebox URP 3D/Assembly-CSharp.csproj
+++ b/Game Design II Whitebox URP 3D/Assembly-CSharp.csproj
@@ -66,6 +66,9 @@
     <Compile Include="Assets\ImportedAssets\IgniteCoders\Simple Water Shader\Resources\WaterReflection.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Fantasy Forest Environment Free Sample\StandardNoCulling.shader" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity 2022.3.16f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
       <Private>False</Private>
